# seekbind

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 123e8e9f7bc4_ilk_semayi_olustur_business_types_.py
backend/: config.py  main.py
backend/api/: routes.py  schemas.py
backend/db/: models.py  qdrant.py  session.py
backend/prompts/: synthetic_enrichment.txt
backend/services/: embedding.py
docker/: Dockerfile.backend
docs/: database_schema.md  file_tree.md  roadmap.md  tech_stack.md  terminal_cheatsheet.md
evaluation/results/diagnostics/: embedding_diversity_businesses_openai.json
scripts/: check_embedding_diversity.py  enrich_with_llm.py  fetch_serpapi.py  generate_synthetic.py  load_embeddings.py  schemas.py  seed_db.py
scripts/constants/: __init__.py  attributes.py  business_types.py  pricing.py  service_taxonomy.py  working_hours.py
scripts/synthetic/: __init__.py  ratings.py  schedule.py  selection.py  tags.py
