[project]
name = "seekbind"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "google-search-results>=2.4.2",
    "openai>=2.48.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
]
